docs table horizontal scroll fix

--- a/website/src/theme/NavbarItem/LocaleDropdownNavbarItem/styles.module.css
+++ b/website/src/theme/NavbarItem/LocaleDropdownNavbarItem/styles.module.css
@@ -6,16 +6,3 @@
 .globeIcon {
   margin-left: 5.5px;
 }
-
-.wrapper {
-  display: flex;
-  align-items: center;
-  &:hover {
-    path {
-      stroke: var(--ifm-navbar-link-hover-color);
-    }
-  }
-  &:after {
-    display: none !important;
-  }
-}
